# Virtual-Interactive-Environment-Project

./: CMakeLists.txt  README.md  imgui.ini  slot1.env  vie_engine
include/Engine/: BehaviorSystem.h  EventSystem.h  FileHandler.h  GameTypes.h  PhysicsEngine.h  RenderPipeline.h  Window.h
include/Engine/Core/: ECS.h  SpatialGrid.h
src/: main.cpp
src/Engine/: BehaviorSystem.cpp  EventSystem.cpp  FileHandler.cpp  PhysicsEngine.cpp  RenderPipeline.cpp  SpatialGrid.cpp  Window.cpp
